# prolog

./: .gitmodules  CMakeLists.txt  README.md
include/: Exception.hpp  Expression.hpp  GrammarChecker.hpp  Lexer.hpp  PrologGrammarChecker.hpp
src/: Exception.cpp  Expression.cpp  GrammarChecker.cpp  Lexer.cpp  PrologGrammarChecker.cpp  main.cpp
